--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -15,6 +15,8 @@ jobs:
           java-version: 21
       - name: Configure Git
         run: git config --global user.email "action@github.com" && git config --global user.name "Github Action"
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Update upstream
         run: |
           ./scripts/updateUpstream.sh
